--- a/src/content/artist.yml
+++ b/src/content/artist.yml
@@ -1,8 +1,14 @@
 name: 'Renate Rittler'
-description: 'Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor'
+facts: 
+  - Geboren 1956 in Wien
+  - Medizinstudium
+  - Tätigkeit als Fachärztin für Anästhesie
+  - Beschäftigung mit Malerei seit frühester Jugend
+  - Weiterbildung autodidakt in verschiedenen Techniken
+  - Zahlreiche Kurse in Aktzeichnung, Aquarell, Druckgrafik, Ölmalerei
+  - 2004 Ausstellung "Heilversuche"
 links:
- - icon: 'fa fa-envelope'
-   url: 'mailto:dummy@mail.com'
+ - 'mailto:dummy@mail.com'
 quotes:
  - text: '[Der Künstler] ... ein politisches Wesen, stets aufnahmebereit für bewegende, brennende oder glückliche Ereignisse, die er in jeder Weise erwidert.'
    author: 'Pablo Picasso'
