--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-masonry-css": "^1.0.14",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
